# dug

./: .gitmodules  README.md
dug-issue-core/: dug-issue-core.cabal
dug-issue-core/src/Dug/Issue/: Data.hs
dug-issue-remote/: dug-issue-remote.cabal
dug-issue-remote-github/: dug-issue-remote-github.cabal
dug-issue-remote-github/src/Dug/Issue/Remote/: Github.hs
dug-issue-remote/src/Dug/Issue/: Remote.hs
dug-prelude/: dug-prelude.cabal
dug-prelude/src/Dug/: Prelude.hs
dug-store-git/src/Dug/Store/: Git.hs
dug-store/src/Dug/: Store.hs
