name:
  dug-issue-remote-git
version:
  0.0.1
license:
  BSD3
author:
  Charles O'Farrell <charleso@charleso.org>
maintainer:
  Charles O'Farrell <charleso@charleso.org>
copyright:
  (c) 2018 Charles O'Farrell
cabal-version:
  >= 1.8
build-type:
  Simple
description:
  dug-issue-remote-git


library
  build-depends:
      base >= 3 && < 5
    , dug-issue-remote
    , dug-prelude
    , github == 0.19.*

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Dug.Issue.Remote.Github
