name:
  dug-prelude
version:
  0.0.1
license:
  BSD3
author:
  Charles O'Farrell <charleso@charleso.org>
maintainer:
  Charles O'Farrell <charleso@charleso.org>
copyright:
  (c) 2018 Charles O'Farrell
cabal-version:
  >= 1.8
build-type:
  Simple
description:
  dug-prelude


library
  build-depends:
      base >= 3 && < 5
    , text == 1.2.*
    , transformers-bifunctors == 0.1.*
    , transformers-either == 0.1.*

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Dug.Prelude
